<resources>
    <string name="app_name">Kapas</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="backdrop_title">KAPAS</string>
    <string name="backdrop_subtitle">“Buy less, choose well.”</string>

    <string name="action_settings">About Us</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="aboutus">KAPAS is a destination for fashion lovers and designers alike to capture and share unique designs. For your “I have nothing to wear” situations, Kapas helps you discover what you love, express your own style and stay up-to-date with the latest fashion trends. Your feed also serves you endless inspirations from fashionistas, brands, beauty and lifestyle. It\'s now easier to feed your styling addiction as life is too short to wear boring clothes.</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="profile_name">Induce Smile</string>
    <string name="country_location">Sweden</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    \
    <string name="profile_names">Display name</string>
    <string name="induce_smile">Induce Smile</string>
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Save edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_aboutus">Aboutus</string>

</resources>
