<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
   >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/girls"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_shape"
            android:hint="@string/hint_name"
            android:textSize="14dp"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/loginTextColor" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_shape"
            android:hint="@string/hint_email"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="14dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/loginTextColor"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_shape"
            android:hint="@string/hint_password"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="14dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/loginTextColor"/>

        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:padding="10dp"
            android:textSize="14dp"
            android:textAlignment="center"
            android:background="@drawable/button_background"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>